--- a/AccelerationUsingBLE/Info.plist
+++ b/AccelerationUsingBLE/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>블루투스 사용 권한을 허용해주세요</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>블루투스 사용 권한을 허용해주세요</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
